[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/villam.png" type="Texture" id=1]
[ext_resource path="res://projectiles/villam.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 10 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
spread = 66.21
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0

[sub_resource type="Animation" id=3]
resource_name = "lighning"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("villamrange/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 169.189

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 9.72582, 1.96654 )

[node name="villam" type="Area2D"]
z_index = 100
collision_layer = 16
collision_mask = 2147483664
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 3

[node name="Particles2D" type="Particles2D" parent="Sprite"]
process_material = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/lighning = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="villamrange" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="villamrange"]
position = Vector2( 0, 0.125 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 0.236235 )
shape = SubResource( 5 )
[connection signal="body_entered" from="." to="." method="_on_villam_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="villamrange" to="." method="_on_villamrange_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
